--- a/scss/layout/_login.scss
+++ b/scss/layout/_login.scss
@@ -4,7 +4,7 @@
         width: 360px;
         height: 300px;
         margin:auto;
-        background: aliceblue;
+        background: #ddd;
         border-radius: 3px;
         .sign{
             text-align: center;
