--- a/scss/layout/_signup.scss
+++ b/scss/layout/_signup.scss
@@ -4,7 +4,7 @@
         width:360px;
         height: 620px;
         margin: auto;
-        background-color: aliceblue;
+        background-color: #ddd;
         border-radius: 3px;
         .sign{
             text-align: center;
@@ -51,3 +51,5 @@
         }
     }
 }
+
+
