--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,17 +10,15 @@
 
 @import "components/banner";
 
-@import "layout/armatupc";
-
 @import "layout/login";
-
-@import "layout/mediaqueris";
 
 @import "layout/signup";
 
 @import "layout/serviciotecnico";
 
 @import "layout/galery";
+
+@import "layout/mediaqueries";
 
 
 
