--- a/scss/layout/_serviciotecnico.scss
+++ b/scss/layout/_serviciotecnico.scss
@@ -1,10 +1,12 @@
 .main-form{
-    background-color:transparent ;
+    background-color:#ddd ;
     padding: 10px 0;
     max-width: 600px;
     margin:auto;
     margin-top: 50px;
+    margin-bottom: 50px;
     border-radius:6px;
+    border: 2px solid  rgba(2,17,22,255);
     .tittle-form{
         text-align: center;
         margin-top: none;
@@ -21,6 +23,7 @@
             background-color: transparent;
             border-radius: 4px;
             box-shadow: 0px 0px 25 rgb(246, 255, 255);
+            background-color: #f0f0f0;
         }
         .form-text{
             min-width:100%;
